--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@usedapp/core": "^0.7.2",
     "@walletconnect/web3-provider": "^1.7.0",
     "axios": "^0.24.0",
+    "ethers": "^5.5.2",
     "framer-motion": "^4",
     "moralis": "^0.0.176",
     "next": "12.0.7",
