--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-moralis": "^0.3.11"
+    "react-moralis": "^0.3.11",
+    "web3modal": "^1.9.4"
   },
   "devDependencies": {
     "@types/node": "17.0.2",
